# cmf

./: .gitignore  404.html  CMF.vsdx  CMakeLists.txt  Dockerfile  Dockerfile-jupyter  Dockerfile.basic  LICENSE  Minicube Setup & Service Deployment.docx  README.md  Requirements.txt  cmf-server.md  cmf_client.md  cmf_server.md  custom-entrypoint.sh  db_init.sql  docker-compose-server.yml  docker-compose.yml  env-example  helm-deployment.sh  index.html  minio.yaml  mkdocs.yaml  nginx.conf  objects.inv  output.txt  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tensorboard.Dockerfile
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/workflows/: deploy_docs_to_gh_pages.yaml
app/: main.py
architecture/: index.html
architecture/advantages/: index.html
architecture/components/: index.html
architecture/overview/: index.html
cmf-deployment/: Chart.yaml  values.yaml
cmf-deployment/templates/: deployment.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml
cmf_client/: index.html
cmf_client/Getting Started with cmf/: index.html
cmf_client/cmf-dvc-ingest-guide/: index.html
cmf_client/cmf_client/: index.html
cmf_client/cmf_client_commands/: index.html
cmf_client/cmf_osdf/: index.html
cmf_client/local-storage-setup/: index.html
cmf_client/minio-server/: index.html
cmf_client/neo4j_docker/: index.html
cmf_client/ssh-setup/: index.html
cmf_client/step-by-step/: index.html
cmf_client/tensorflow_guide/: index.html
cmf_gui_app/: manage.py
cmf_gui_app/cmf_gui_app/: asgi.py  models.py  settings.py  urls.py  wsgi.py
cmf_gui_app/index/: views.py
cmf_raven/: Attempt-1.ipynb
cmf_server/cmf-server/: index.html
cmf_server/index_1/: index.html
cmf_server/metahub-tab-usage/: index.html
cmfconfig/: config.yaml
cmflib/: __init__.py  amazonS3_artifacts.py  artifacts.py  callback.py  cmf.py  cmf_analysis.py  cmf_async_api.py  cmf_async_proxy.py  cmf_commands_wrapper.py  cmf_exception_handling.py  cmf_federation.py  cmf_init.py  cmf_iteration.py  cmf_merger.py  cmf_ray_logger.py  cmf_server.py  cmf_server_methods.py  cmf_subprocess_manager.py  cmf_success_codes.py  cmf_worker_loop.py  cmfquery.py  cmfquery_temp.py  dvc_config.py  dvc_wrapper.py  graph_wrapper.py  index.html  local_artifacts.py  merger.py  metadata_helper.py  metadata_helpers.py  minio_artifacts.py  mlmd_objects.py  sshremote_artifacts.py  temp.py  test_cmf.py
cmflib/cli/: __init__.py  command.py  parser.py  progress_bar.py  utils.py
cmflib/command/: pull.py
cmflib/commands/: error_handling.py  pull.py  push.py
cmflib/contrib/: analysis_engine.py  auto_logging_v01.py  fluent.py  graph_api.py  init.py  query_engine.py
cmflib/metadata/: mlmd_store.py  store.py
cmflib/request_mlmdserver/: server_interface.py
cmflib/server_interface/: server_interface.py
cmflib/storage_backends/: SshFailingReason.md  amazonS3_artifacts.py  local_artifacts.py  minio_artifacts.py  osdf_artifacts.py  sshremote_artifacts.py
cmflib/store/: cmfstore.py  custom_sqlite_store.py  postgres.py  sqllite_store.py
cmflib/tests/: pytest.ini  test_cmfquery.py  test_helper_functions.py
cmflib/utils/: cmf_config.py  dvc_config.py  execution_utils.py  helper_functions.py
common-metadata-ontology/readme/: index.html
csrc/log_metric/: log_metric_lib.c  log_metric_lib.h  main.c  readme.md
docs/: README.md  index.md  requirements.txt  sms_spam_comparison.md
docs/_src/: README.md  diagrams.drawio
docs/api/: api.md
docs/architecture/: advantages.md  components.md  index.md  overview.md
docs/cmf_client/: Getting Started with cmf.md  cmf-dvc-ingest-guide.md  cmf_client.md  cmf_client_commands.md  cmf_osdf.md  index.md  local-storage-setup.md  minio-server.md  neo4j_docker.md  readme.md  ssh-setup.md  step-by-step.md  tensorflow_guide.md
docs/cmf_server/: cmf-server.md  index_1.md  metahub-tab-usage.md
docs/cmflib/: index.md
docs/development/: documentation.md  (+2 more)
example-get-started/: Query_Tester-base_mlmd.ipynb  README.md  initialize.sh  sample_env  test-data-slice.py  test_script.sh
include/: log_metric.h
k8s-deployment/: values.yaml
kubernetes/: INSTALLATION.md  Minikube_Setup_Manifest.md  secrets.yaml  values.yaml
mcp/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  example.env  index.html  main.py  pyproject.toml  requirements.txt
mcp/configuration/: index.html
mcp/examples/: index.html
mcp/quickstart/: index.html
mcp/tools/: __init__.py  additional.py  artifact.py  cmfclient.py  conn.py  execution.py  index.html  pipeline.py
pycallgraph/: create_unique_exe_new.py  create_unique_execution.py  get_all_artifact_id.py  get_all_artifact_id_new.py  get_all_exe_id.py  get_all_exe_id_new.py  get_artifacts.py  get_executions.py  get_mlmd_from_server.py  get_mlmd_from_server_new.py  model_card.py
request_mlmdserver/: server_interface.py
search/: search_index.json
server/: Dockerfile  requirements.txt
setup/: index.html
skills/: README.md  index.html
test/: Readme.md  client_test_suite.py  config.json  sanity_testing.py  server_api_endpoints_test_suite.py
ui/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
utils/: neo4j_docker.md
(+549 files in other folders)
