[project]
name = "cmflib"
version = "0.0.92"
dependencies = [
	"ml-metadata==1.15.0",
	"dvc[ssh,s3]==3.51.1",
	"pandas",
	"retrying",
	"pyarrow",
	"neo4j",
	"scikit-learn",
	"tabulate",
	"click",
	"minio",
	"paramiko",
	"scitokens", 
	"cryptography",
]
authors = [
  { name="Hewlett Packard Enterprise"},
]
description = "Track metadata for AI pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/HewlettPackard/cmf"
"Bug Tracker" = "https://github.com/HewlettPackard/cmf/issues"

[tool.flake8]
max-line-length = 120

exclude = [
    './.git',
    './.github',
    './docs',
    '__pycache__',
    '.pytest_cache',
]

# D100 Missing docstring in public module (disabled temporarily)
ignore = ['D100']

# D101 Missing docstring in public class
# D102 Missing docstring in public method
# D103 Missing docstring in public function
# D104 Missing docstring in public package
per-file-ignores = [
     'test_*.py: D101, D102, D103, D104'
]
