[project]
name = "cmflib"
version = "0.0.93"
dependencies = [
	"ml-metadata==1.15.0",
	"dvc[ssh,s3]==3.51.1",
	"pandas",
	"retrying",
	"pyarrow",
	"neo4j==5.26",
	"tabulate",
	"click",
	"minio",
	"paramiko==3.4.1",
	"scikit_learn",
	"scitokens", 
	"cryptography",   
	"ray==2.34.0",
	"readchar",
]

authors = [
  { name = "Hewlett Packard Enterprise"}
]
description = "Track metadata for AI pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/HewlettPackard/cmf"
BugTracker = "https://github.com/HewlettPackard/cmf/issues"

[tool.setuptools]
license-files = [ "LICENSE.txt" ]
